--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,8 +15,16 @@
 
     <body>
     <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+     <!-- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="{% url 'djangoapp:about' %}">About Us</a>  
+            <li><a href="{% url 'djangoapp:contact' %}">Contact Us</a>           </li>
+            <!-- Add other navigation links as needed -->
+        </ul>
+    </nav>
 
     <!--Add a dealer table here -->
 
